@@ -3,13 +3,11 @@
 # for this test.
 
 use strict;
-use Test::More tests => 3;
+use Test::More tests => 7;
 
 use lib 't';
 use TestLib;
 
-is (`pg_lsclusters -h`, '', 'No existing clusters');
-is ((ps 'postmaster'), '', 'No existing postmaster processes');
-is ((ps 'pg_autovacuum'), '', 'No existing pg_autovacuum processes');
+check_clean;
 
 # vim: filetype=perl
